firewall.conf
# Generated by iptables-save v1.4.10 on Sat Apr 30 08:54:44 2011
*filter
:INPUT DROP [5:1053]
:FORWARD DROP [0:0]
:OUTPUT DROP [0:0]
:DYNDROP - [0:0]
-A INPUT -i lo -j ACCEPT 
-A INPUT -m u32 --u32 0x0&0xf000000=0x5:0xf -m comment --comment "IP header length longer or equal to 5 bytes" -j DYNDROP 
-A INPUT -p udp -m length --length 1472:65535 -m comment --comment "UDP and UDP size bigger then 1472" -j DYNDROP 
-A INPUT -p udp -f -m comment --comment "UDP and second and later fragments" -j DYNDROP 
-A INPUT -m u32 --u32 0x6&0xff=0x11&&0x6&0xe0000000=0x1 -m comment --comment "UDP with MF bit set" -j DYNDROP 
-A INPUT -m ttl --ttl-lt 5 -m comment --comment "TTL lower then 5" -j DYNDROP 
-A INPUT -p tcp -m tcp --tcp-flags FIN,RST FIN,RST -m comment --comment "tcp-flags FIN,RST FIN,RST" -j DYNDROP 
-A INPUT -p tcp -m tcp --tcp-flags SYN,RST SYN,RST -m comment --comment "tcp-flags SYN,RST SYN,RST" -j DYNDROP 
-A INPUT -p tcp -m tcp --tcp-flags FIN,SYN FIN,SYN -m comment --comment "tcp-flags FIN,SYN FIN,SYN" -j DYNDROP 
-A INPUT -p tcp -m tcp --tcp-flags SYN,URG SYN,URG -m comment --comment "tcp-flags SYN,URG SYN,URG" -j DYNDROP 
-A INPUT -p tcp -m tcp --tcp-flags FIN,SYN,RST,PSH,ACK,URG NONE -m comment --comment "tcp-flags FIN,SYN,RST,PSH,ACK,URG NONE" -j DYNDROP 
-A INPUT -p tcp -m tcp --tcp-flags FIN,SYN,RST,PSH,ACK,URG FIN,SYN,RST,PSH,ACK,URG -m comment --comment "tcp-flags FIN,SYN,RST,PSH,ACK,URG FIN,SYN,RST,PSH,ACK,URG" -j DYNDROP 
-A INPUT -m conntrack --ctstate INVALID -j DYNDROP 
-A INPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT 
-A INPUT -p tcp -m conntrack --ctstate NEW -m tcp --dport 23399 -j ACCEPT 
-A INPUT -p udp -m conntrack --ctstate NEW -m udp --dport 23399 -j ACCEPT 
-A INPUT -p tcp -m tcp --tcp-flags SYN SYN -m comment --comment "tcp-flags SYN SYN" -j DYNDROP 
-A OUTPUT -o lo -j ACCEPT 
-A OUTPUT -m conntrack --ctstate NEW,RELATED,ESTABLISHED -j ACCEPT 
-A DYNDROP -m limit --limit 5/min -j LOG --log-tcp-sequence --log-tcp-options --log-ip-options --log-uid 
-A DYNDROP -j DROP 
COMMIT
# Completed on Sat Apr 30 08:54:44 2011
# Generated by iptables-save v1.4.10 on Sat Apr 30 08:54:45 2011
*mangle
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
COMMIT
# Completed on Sat Apr 30 08:54:45 2011
